--- a/smallCrud/templates/empresa/index.html.twig
+++ b/smallCrud/templates/empresa/index.html.twig
@@ -24,12 +24,12 @@
                 <td>{{ empresa.nombreEmpresa }}</td>
                 <td>{{ empresa.tlfEmpresa }}</td>
                 <td>{{ empresa.emailEmpresa }}</td>
-                <td>{{ sector[empresa.sectorEmpresa].nombreSector }}</td>
+                <td>{{ sector[empresa.sectorEmpresa - 1].nombreSector }}</td>
                 <td>
                 {# botones aqui #}
                     <a class="btn btn-primary" href="{{ path('empresa_show', {'id': empresa.id}) }}">Ver mas</a>
                     <a class="btn btn-success" href="{{ path('empresa_edit', {'id': empresa.id}) }}">Editar</a>
-                    <a class="btn btn-danger" href="{{ path('empresa_confirmar_borrar', {'id': empresa.id }) }}">Delete</a>
+                    <a class="btn btn-danger" href="{{ path('empresa_confirmar_borrar', {'id': empresa.id }) }}">Eliminar</a>
 
                     {# <div class="container mx-auto mt-1 ">
                     {{ include('empresa/_delete_form.html.twig') }}
@@ -43,9 +43,9 @@
         {% endfor %}
         </tbody>
     </table>
+    <a class="btn btn-primary float-left" href="{{ path('empresa_new') }}">Crear empresa</a>
 
 {# boton crear nueva empresa #}
-    <a class="btn btn-primary text-center mx-auto" href="{{ path('empresa_new') }}">Create new</a>
 </div>
 
 {% endblock %}
