--- a/smallCrud/templates/empresa/show.html.twig
+++ b/smallCrud/templates/empresa/show.html.twig
@@ -32,8 +32,10 @@
 <row class="px-1 pb-2 col-9">
     <a class="btn btn-primary" href="{{ path('empresa_index') }}">Volver a Empresas</a>
     <a class="btn btn-success" href="{{ path('empresa_edit', {'id': empresa.id}) }}">Editar empresa</a>
+    <a class="btn btn-danger" href="{{ path('empresa_confirmar_borrar', {'id': empresa.id }) }}">Eliminar empresa</a>
+
     <div class="container text-center mt-3 mx-auto">
-    {{ include('empresa/_delete_form.html.twig') }}
+    {# {{ include('empresa/_delete_form.html.twig') }} #}
     
     </div>
     </row>
