--- a/smallCrud/templates/sector/index.html.twig
+++ b/smallCrud/templates/sector/index.html.twig
@@ -3,33 +3,35 @@
 {% block title %}Sector index{% endblock %}
 
 {% block body %}
-    <h1>Sector index</h1>
-
-    <table class="table">
+<div class="container col-6 mx-auto text-center">
+    <table class="table table-striped">
         <thead>
             <tr>
+            {# headers #}
                 <th>Id</th>
-                <th>Nombre_sector</th>
-                <th>actions</th>
+                <th>Nombre de sector</th>
+                <th>Opciones</th>
             </tr>
         </thead>
         <tbody>
         {% for sector in sectors %}
+        {# data x sector #}
             <tr>
                 <td>{{ sector.id }}</td>
                 <td>{{ sector.nombreSector }}</td>
                 <td>
-                    <a href="{{ path('sector_show', {'id': sector.id}) }}">show</a>
-                    <a href="{{ path('sector_edit', {'id': sector.id}) }}">edit</a>
+                    <a class="btn btn-success" href="{{ path('sector_show', {'id': sector.id}) }}">Ver</a>
+                    <a class="btn btn-primary" href="{{ path('sector_edit', {'id': sector.id}) }}">Editar</a>
+                    <a class="btn btn-danger" href="{{ path('sector_confirmar_borrar', {'id': sector.id}) }}">Eliminar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">No se encontraros sectores.</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('sector_new') }}">Create new</a>
+    <a class="btn btn-primary float-left" href="{{ path('sector_new') }}">Crear nuevo sector</a>
 {% endblock %}
