--- a/smallCrud/templates/sector/new.html.twig
+++ b/smallCrud/templates/sector/new.html.twig
@@ -3,9 +3,16 @@
 {% block title %}Nuevo sector{% endblock %}
 
 {% block body %}
-    <h1>Create new Sector</h1>
+    <h1>Crear nuevo Sector</h1>
 
+
+<div class="container col-6 mx-auto ">
     {{ include('sector/_form.html.twig') }}
+    <a class="btn btn-danger mt-3" href="{{ path('sector_index') }}">Cancelar</a>
 
-    <a href="{{ path('sector_index') }}">back to list</a>
+</div>
+
+
+
+    <a href="{{ path('sector_index') }}">Cancelar</a>
 {% endblock %}
