--- a/smallCrud/templates/sector/show.html.twig
+++ b/smallCrud/templates/sector/show.html.twig
@@ -3,24 +3,54 @@
 {% block title %}Sector{% endblock %}
 
 {% block body %}
-    <h1>Sector</h1>
 
-    <table class="table">
+<div class="container col-6 mx-auto text-center">
+    <h1>Viendo: {{ sector.nombreSector }}</h1>
+    <table class="table table-striped">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ sector.id }}</td>
             </tr>
             <tr>
-                <th>Nombre_sector</th>
+                <th>Nombre sector</th>
                 <td>{{ sector.nombreSector }}</td>
             </tr>
         </tbody>
     </table>
+{# botones #}
+    <a href="{{ path('sector_index') }}">Volver a Sectores</a>
+    <a href="{{ path('sector_edit', {'id': sector.id}) }}">Editar sector</a>
+    <a href="{{ path('sector_confirmar_borrar', {'id': sector.id}) }}">Eliminar sector</a>
 
-    <a href="{{ path('sector_index') }}">back to list</a>
+</div>
 
-    <a href="{{ path('sector_edit', {'id': sector.id}) }}">edit</a>
-
-    {{ include('sector/_delete_form.html.twig') }}
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
